# Codex-Mate

./: CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  setup.bat  setup.command
.github/workflows/: release-assets.yml
codex_mate/: __main__.py  api_adapter.py  autostart.py  cc_switch.py  cdp.py  cli.py  codex_storage.py  conversation_timeline.py  diagnostics.py  doctor.py  helper_server.py  history_sync.py  installers.py  launcher.py  macos_installer.py  markdown_export.py  native_features.py  rollout_reader.py  runtime.py  storage_adapter.py  updater.py  watcher.py  windows_installer.py
codex_mate/inject/: renderer-inject.js
codex_session_delete/: autostart.py  cli.py  history_sync.py  installers.py  launcher.py  macos_installer.py  updater.py  watcher.py  windows_installer.py
codex_session_delete/inject/: renderer-inject.js
docs/: history-launch-fix.md
tests/: conftest.py  test_api_adapter.py  test_app_paths.py  test_autostart.py  test_backup_store.py  test_cc_switch.py  test_cdp.py  test_codex_storage.py  test_conversation_timeline.py  test_diagnostics.py  test_doctor.py  test_helper_server.py  test_history_sync.py  test_installers.py  test_launcher_cli.py  test_macos_installer.py  test_markdown_export.py  test_models.py  test_native_features.py  test_package_main.py  test_readme.py  test_release_workflow.py  test_renderer_script.py  test_rollout_reader.py  test_runtime.py  test_setup_bat.py  test_setup_command.py  test_storage_adapter.py  test_updater.py  test_watcher.py  test_windows_installer.py
